# romav2-onnx

./: .gitignore  README.md  pyproject.toml
scripts/: export_onnx.py  triton_client.py  triton_sampled_client.py  validate_sampler_ops.py  visualize.py
src/romav2/: dpt.py  features.py  local_correlation.py  matcher.py  refiner.py  romav2.py
src/romav2/vit/: __init__.py
triton/model_repository/romav2/: config.pbtxt
triton/model_repository/romav2_bidirectional/: config.pbtxt
triton/model_repository/romav2_bidirectional_dense/: config.pbtxt
triton/model_repository/romav2_bidirectional_sampled/: config.pbtxt
triton/model_repository/romav2_sampler/: config.pbtxt
triton/model_repository/romav2_sampler/1/: model.py  sampler.py
