[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "romav2-onnx"
version = "0.1.0"
description = "ONNX export, validation, visualization and Triton deployment for RoMa v2 dense image matcher"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # RoMa v2 source model
    "romav2 @ git+https://github.com/Parskatt/RoMaV2.git",

    # Core
    "torch>=2.5",
    "numpy>=1.24",
    "pillow>=10.0",
    "einops>=0.7",

    # ONNX export + validation
    "onnx>=1.16",
    "onnxruntime>=1.18",

    # Visualisation
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
triton = [
    "tritonclient[http]>=2.40",
]
all = [
    "romav2-onnx[triton]",
]

[tool.setuptools.packages.find]
where = ["scripts"]
