[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "romav2-onnx"
version = "0.1.0"
description = "ONNX export, validation, visualization and Triton deployment for RoMa v2 dense image matcher"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # romav2 is embedded in src/ (modified fork of Parskatt/RoMaV2)
    "torch>=2.5",
    "torchvision>=0.20",
    "numpy>=1.24",
    "pillow>=10.0",
    "einops>=0.7",
    "rich>=13.0",
    "tqdm>=4.65",

    # ONNX export + validation
    "onnx>=1.16",
    "onnxruntime>=1.18",

    # Visualisation
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
triton = [
    "tritonclient[http]>=2.40",
]
all = [
    "romav2-onnx[triton]",
]

[tool.setuptools.packages.find]
where = ["src"]
